<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="top|left|bottom"
    android:foregroundTint="#F44336">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232f34"
        android:padding="10dp"
        tools:context=".Home">


        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/Search"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="114dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/round_button"
            android:text="@string/Search"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtSearch"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:labelFor="@+id/txtName"
            android:text="@string/Name"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/txtName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearch" />


        <EditText
            android:id="@+id/txtName"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearch"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/lblDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:labelFor="@+id/txtDOB"
            android:text="@string/DOB"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtDOB"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblName" />

        <EditText
            android:id="@+id/txtDOB"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/ageFormat"
            android:importantForAutofill="no"
            android:inputType="textFilter"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <TextView
            android:id="@+id/lblGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:labelFor="@+id/radioGroupGender"
            android:text="@string/Gender"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupGender"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDOB" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDOB">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="94dp"
                android:layout_height="48dp"
                android:background="#232f34"
                android:text="@string/Male"
                android:textColor="#FFCA28"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/Female"
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:background="#232f34"
                android:text="@string/Female"
                android:textColor="#FFCA28" />
        </RadioGroup>


        <TextView
            android:id="@+id/lblCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="42dp"
            android:labelFor="@+id/spinnerCourse"
            android:text="@string/Course"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/spinnerCourse"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblGender" />

        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:labelFor="@+id/txtEmail"
            android:text="@string/Email"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCourse" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCourse"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/lblRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:labelFor="@+id/txtRegistration"
            android:text="@string/Registration"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtRegistration"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

        <EditText
            android:id="@+id/txtRegistration"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:editable="true"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/round_button"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRegistration"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/round_button"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAdd"
            app:layout_constraintTop_toBottomOf="@+id/lblRegistration"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/round_button"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDelete"
            app:layout_constraintTop_toBottomOf="@+id/lblRegistration"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/round_button"
            android:textColor="@color/textColor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@+id/lblRegistration"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/round_button"
            android:text="@string/btnReset"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toEndOf="@+id/btnView"
            app:layout_constraintTop_toBottomOf="@+id/txtRegistration"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="391dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="#425B7F"
            android:minHeight="?attr/actionBarSize"
            android:padding="0dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/textColor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="214dp"
            android:layout_height="41dp"
            android:text="@string/Heading"
            android:textAlignment="viewStart"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.75"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/btnAdd"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="@+id/btnAdd"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/btnAdd"
            app:layout_constraintTop_toTopOf="@+id/btnAdd"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/btnDelete"
            app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
            app:layout_constraintEnd_toEndOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="@+id/btnDelete"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/btnUpdate"
            app:layout_constraintBottom_toBottomOf="@+id/btnUpdate"
            app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="@+id/btnUpdate"
            app:layout_constraintVertical_bias="0.583"
            app:srcCompat="@android:drawable/stat_notify_sync" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/btnView"
            app:layout_constraintBottom_toBottomOf="@+id/btnView"
            app:layout_constraintEnd_toEndOf="@+id/btnView"
            app:layout_constraintStart_toStartOf="@+id/btnView"
            app:layout_constraintTop_toTopOf="@+id/btnView"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>